初始化提交